--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -17,4 +17,4 @@ jobs:
       - name: Push to hub
         env:
           HF_TOKEN: ${{ secrets.HG }}
-        run: git push https://diivien:$HF_TOKEN@huggingface.co/spaces/diivien/Music-Popularity-Prediction main
+        run: git push --force https://diivien:$HF_TOKEN@huggingface.co/spaces/diivien/Music-Popularity-Prediction main
